--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 			</ul>
 		</nav>
 	</header>
-	<img src="../../../imagenes/MrRobotS213.jpg">
+	<img src="MrRobotS213.jpg">
     <div class="row" id="lenguajes">
 		<div class="column">
-			<img src="../../../imagenes/Bootstrap.jpg"><!---->
-			<img src="../../../imagenes/jquery.png"><!---->
-			<img src="../../../imagenes/MySQL.png"><!---->
+			<img src="Bootstrap.jpg"><!---->
+			<img src="jquery.png"><!---->
+			<img src="MySQL.png"><!---->
 		</div>
 		<div class="column">
-			<img src="../../../imagenes/backend-developer-1080x675.jpg">
-			<img src="../../../imagenes/codeigniter.png">
+			<img src="backend-developer-1080x675.jpg">
+			<img src="codeigniter.png">
 		</div>
 	</div>
 	<div id="contact">
